--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "cookie-clicker-duck-game",
-  "homepage": ".",
+  "homepage": "https://assassinanyue.github.io/QuackClick",
   "version": "1.0.0",
   "description": "Cookie Clicker style duck clicking game",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
