--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookie-clicker-duck-game",
-  "homepage": "https://assassinanyue.github.io/QuackClick",
+  "homepage": "https://assassinanyue.github.io/QuackClick/",
   "version": "1.0.0",
   "description": "Cookie Clicker style duck clicking game",
   "private": true,
